--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple MERN ecommerce site",
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -17,7 +18,9 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd client && yarn run start",
-    "dev": "concurrently --kill-others-on-fail \"yarn run server\" \"yarn run client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn run server\" \"yarn run client\"",
+    "data:import": "node server/seeder",
+    "data:destroy": "node server/seeder -d"
   },
   "repository": {
     "type": "git",
